--- a/src/components/baseButton/baseButton.scss
+++ b/src/components/baseButton/baseButton.scss
@@ -15,7 +15,9 @@
     line-height: 16px;
     letter-spacing: 0.03em;
     border: 0;
-    transition: background-color 0.25s ease-in-out, color 0.25s ease-in-out;
+    transition:
+        background-color 0.25s ease-in-out,
+        color 0.25s ease-in-out;
 
     &.left-icon {
         padding-left: 24px;
@@ -35,7 +37,7 @@
         color: $color-white;
 
         &:hover {
-            background-color: $color-blue-delta;
+            background-color: $color-primary-beta;
         }
 
         &:active {
@@ -43,7 +45,7 @@
         }
 
         &.--disabled {
-            background-color: $color-cosmos-blue-delta;
+            background-color: $color-primary-beta;
             color: $color-cosmos-blue-zeta;
         }
 
@@ -67,7 +69,7 @@
         }
 
         &:hover {
-            background-color: $color-cosmos-blue-beta;
+            background-color: $color-primary-beta;
 
             &.--danger {
                 background-color: $color-red-beta;
@@ -75,7 +77,7 @@
         }
 
         &:active {
-            background-color: $color-cosmos-blue-alpha;
+            background-color: $color-primary-alpha;
 
             &.--danger {
                 background-color: $color-red-gamma;
@@ -90,15 +92,15 @@
     &.type--line {
         color: $color-primary-alpha;
         background-color: $color-white;
-        border: 1px solid $color-cosmos-blue-gamma;
+        border: 1px solid $color-primary-gamma;
 
         &:hover {
-            background-color: $color-cosmos-blue-beta;
+            background-color: $color-primary-beta;
         }
 
         &:active {
-            background-color: $color-cosmos-blue-alpha;
-            border: 1px solid $color-cosmos-blue-delta;
+            background-color: $color-primary-alpha;
+            border: 1px solid $color-primary-delta;
         }
 
         &.--disabled {
