--- a/src/components/baseButton/baseButton.scss
+++ b/src/components/baseButton/baseButton.scss
@@ -37,7 +37,7 @@
         color: $color-white;
 
         &:hover {
-            background-color: $color-primary-beta;
+            opacity: 0.9;
         }
 
         &:active {
@@ -45,7 +45,7 @@
         }
 
         &.--disabled {
-            background-color: $color-primary-beta;
+            opacity: 0.3;
             color: $color-cosmos-blue-zeta;
         }
 
